Make some basic improvements like showing page titles

--- a/datasethoster/template/base.html
+++ b/datasethoster/template/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
     {% endblock %}
 
-    <title>{% block title %}Dataset Hoster{% endblock %}</title>
+    <title>Dataset hoster: {% block title %}{% endblock %}</title>
 
     {% endblock %}
   </head>
