--- a/datasethoster/template/index.html
+++ b/datasethoster/template/index.html
@@ -1,4 +1,5 @@
 {%- extends 'base.html' -%}
+{%- block title -%}home{% endblock %}
 {%- block content -%}
 
 <h2>MetaBrainz Dataset Hoster Home</h2>
