--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -1,4 +1,5 @@
 {%- extends 'base.html' -%}
+{%- block title -%}{{ slug }}{% endblock %}
 {%- block content -%}
 
 <h2>{{ slug }}</h2>
@@ -37,6 +38,8 @@
             {% else %}
               <td>{{ row[column] }}</td>
             {% endif %}
+          {% else %}
+             <strong>No results were returned. Boo!</strong>
           {% endfor %}
         </tr>
       {% endfor %}
