--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -42,7 +42,7 @@
               <td><a href="https://musicbrainz.org/release/{{ row[column] }}">{{ row[column] }}</a></td>
             {% elif column.endswith("release_group_mbid") or column.endswith("release_group_id") %}
               <td><a href="https://musicbrainz.org/release-group/{{ row[column] }}">{{ row[column] }}</a></td>
-            {% elif column.endswith("artist_mbid") or column.endswith("artist_id") %}
+            {% elif column.endswith("artist_mbid") or column.endswith("artist_id") or column.endswith("artist_credit_id") %}
               <td><a href="https://musicbrainz.org/artist/{{ row[column] }}">{{ row[column] }}</a></td>
             {% else %}
               <td>{{ row[column] }}</td>
