--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -53,7 +53,7 @@
                 {% endfor %}
               </td>
             {% else %}
-              <td>{{ type(row[column]) }} {{ row[column] }}</td>
+              <td>{{ row[column] }}</td>
             {% endif %}
           {% endfor %}
         </tr>
