Remove spurios char

--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -6,7 +6,7 @@
 <h4>{{ desc }}</h4>
 <p>
    {{ introduction }}
-   (<a href="{{ json_url }}>">JSON version</a>)
+   (<a href="{{ json_url }}">JSON version</a>)
 </p>
 
 <form action="/{{ slug }}">
