--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -12,7 +12,11 @@
 <form action="/{{ slug }}">
   {% for input in inputs %}
      <label for="{{ input }}">{{ input }}</label>
-     <input type="text" id="{{ input }}" name="{{ input }}" value="{{args[input] | escape }}"><br>
+     <input type="text" 
+            id="{{ input }}" 
+            name="{{ input }}" 
+            placeholder="{% if input[0] == '[' %}list of items{% else %}single value{% endif %}"
+            value="{{args[input] | escape }}"><br>
   {% endfor %}
   <input type="submit" value="run query">
 </form>
