--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -53,6 +53,8 @@
               <td><a href="https://musicbrainz.org/release-group/{{ row[column] }}">{{ row[column] }}</a></td>
             {% elif column.endswith("artist_mbid") or column.endswith("artist_id") or column.endswith("artist_credit_id") %}
               <td><a href="https://musicbrainz.org/artist/{{ row[column] }}">{{ row[column] }}</a></td>
+            {% elif column.endswith("_json") %}
+              <td><pre>{{ row[column] }}</pre></td>
             {% elif row[column] is iterable and row[column] is not string  %} 
               <td>
                 {% for v in row[column] %}
