--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -28,15 +28,20 @@
   </div>
 {% endif %}
 
+  <div>
 {% if count >= 0 %}
-    <p><b>{{ count }} rows returned</b></p>
+       <p><b>{{ count }} rows returned</b></p>
+{% else %}
+       <p><b>No results found</b></p>
 {% endif %}
+  </div>
 
 {% if recording_mbids %}
+  <div style="float: right">
     <a class="button"
        href="https://test.listenbrainz.org/player/?recording_mbids={{ recording_mbids }}">Open results as a playlist</a>
+  </div>
 {% endif %}
-
 
 {% if data %}
   <table>
