Update for prod URL

--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -31,7 +31,7 @@
 {% if recording_mbids %}
   <div style="float: right">
     <a class="button" target="_blank"
-       href="https://test.listenbrainz.org/player/?recording_mbids={{ recording_mbids }}">Open results as a playlist</a>
+       href="https://listenbrainz.org/player/?recording_mbids={{ recording_mbids }}">Open results as a playlist</a>
   </div>
 {% endif %}
 
