Use none not None

--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -46,7 +46,7 @@
     </div>
 {% endif %}
 
-{% if summary is not None %}
+{% if summary is not none %}
     <div>
        {{ summary }}
     </div>
