--- a/datasethoster/template/query.html
+++ b/datasethoster/template/query.html
@@ -36,7 +36,7 @@
 {% endif %}
 
 
-{% if data is not None %}
+{% if data is not none %}
     <div>
   {% if count >= 0 %}
          <p><b>{{ count }} rows returned</b></p>
