--- a/datasethoster/template/macros.html
+++ b/datasethoster/template/macros.html
@@ -9,13 +9,15 @@
 {% macro format_output(output) %}
   {% if output %}
     {% if "recording_mbid" in output.columns %}
-      <div style="float: right">
-        {% set recording_mbids = output.data[:50] | selectattr('recording_mbid') | join(',', 'recording_mbid') %}
-        <a class="button" target="_blank"
-           href="https://listenbrainz.org/player/?recording_mbids={{ recording_mbids }}">
-          Open results as a playlist
-        </a>
-      </div>
+      {% set recording_mbids = output.data[:50] | selectattr('recording_mbid') | join(',', 'recording_mbid') %}
+      {% if recording_mbids %}
+        <div style="float: right">
+          <a class="button" target="_blank"
+             href="https://listenbrainz.org/player/?recording_mbids={{ recording_mbids }}">
+            Open results as a playlist
+          </a>
+        </div>
+      {% endif %}
     {% endif %}
     <div>
       {% set count = output.data | length %}
